infra/k8s-prod/document-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-service-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: document
  template:
    metadata:
      labels:
        app: document
    spec:
      containers:
        - name: document
          image: asia.gcr.io/digidocs-stage/document:latest
---
apiVersion: v1
kind: Service
metadata:
  name: document-srv
spec:
  selector:
    app: document
  ports:
    - name: document
      protocol: TCP
      port: 80
      targetPort: 80
