infra/k8s-prod/nato-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nato-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nato
  template:
    metadata:
      labels:
        app: nato
    spec:
      containers:
        - name: nato
          image: asia.gcr.io/digidocs-stage/nato-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: nato-srv
spec:
  selector:
    app: nato
  ports:
    - name: nato
      protocol: TCP
      port: 80
      targetPort: 80
