infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.infra.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
    - hosts:
      - stage-api.digidocs.one
      secretName: digidocs-app-tls
  rules:
    - host: stage-api.digidocs.one
      http:
        paths:
          - path: /api/v1/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 80
          - path: /api/v1/authorization/?(.*)
            pathType: Prefix
            backend:
              service:
                name: authorization-srv
                port:
                  number: 80
          - path: /api/v1/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port:
                  number: 80
          - path: /api/v1/nato/?(.*)
            pathType: Prefix
            backend:
              service:
                name: nato-srv
                port:
                  number: 80
